Refactor branding and remove Instagram integration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,1 @@
-# Instagram Graph API (server-side only)
-INSTAGRAM_USER_ID=
-INSTAGRAM_ACCESS_TOKEN=
-INSTAGRAM_REELS_LIMIT=6
+# Add project environment variables here when needed.
