Add contact page and update contact/about content

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-# Add project environment variables here when needed.
+# Public Turnstile site key (safe for client-side use)
+PUBLIC_TURNSTILE_SITE_KEY=
+
+# Server-only Turnstile secret key (never expose this in client code)
+TURNSTILE_SECRET_KEY=
